methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:5: error: not found: value setColorBrosse
  setColorBrosse(c);
  ^MethodsPicture:51: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime9.MethodsPicture'
override def run() {
             ^